2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/40_or_float_float.deca
// Description :
//      opération || entre float et float 
// Resultats :
//    Erreur Contexteulle : ligne 10 : l'opération || n'est pas possible entre 'float' et 'float'
//
// Historique :
// cree le 10/01/2024

{
    1.5 || 2.5 ;
}